--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^12.4.3",
     "html2pdf.js": "^0.9.3",
     "lucide-react": "^0.475.0",
+    "moment": "^2.30.1",
     "next": "15.1.7",
     "prisma": "^6.3.1",
     "react": "^19.0.0",
