--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "moment": "^2.30.1",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
+    "number-to-words": "^1.2.4",
     "prisma": "^6.6.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
