--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "number-to-words": "^1.2.4",
     "prisma": "^6.6.0",
     "react": "^19.0.0",
+    "react-date-range": "^2.0.1",
+    "react-datepicker": "^8.4.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
