--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "vercel": "^32.3.0",
     "woocommerce-api": "^1.5.0",
     "xlsx": "^0.18.5",
+    "xlsx-js-style": "^1.2.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
