--- a/package.json
+++ b/package.json
@@ -50,8 +50,11 @@
     "react-date-range": "^2.0.1",
     "react-datepicker": "^8.4.0",
     "react-day-picker": "^9.7.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
+    "react-select": "^5.10.2",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
